--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore .",
     "test": "jest"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
