--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           cache: maven
+          distribution: adopt
+          java-version: 11
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
