--- a/backend/.github/workflows/deploy-dev.yml
+++ b/backend/.github/workflows/deploy-dev.yml
@@ -8,18 +8,16 @@ on:
 env:
   REMOTE_HOST: "ssh://dokku@reims2.app"
 
+concurrency: deploy-api
+
 jobs:
   deploy-dev-api:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Wait for previous deploy
-        uses: softprops/turnstyle@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
       - name: Deploy with dokku
         uses: dokku/github-action@master
         with:
