--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -24,3 +24,5 @@ jobs:
         run: yarn run lint
       - name: Run tests
         run: yarn test
+      - name: Run build
+        run: yarn run build
