--- a/ansible/dump.sql.example
+++ b/ansible/dump.sql.example
@@ -9,6 +9,10 @@
 /*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
 /*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;
 
+--
+-- Table structure for table `dispense`
+--
+
 DROP TABLE IF EXISTS `dispense`;
 /*!40101 SET @saved_cs_client     = @@character_set_client */;
 /*!40101 SET character_set_client = utf8 */;
@@ -17,7 +21,7 @@ CREATE TABLE `dispense` (
   `modify_date` datetime(6) DEFAULT NULL,
   `previous_sku` int(11) DEFAULT NULL,
   PRIMARY KEY (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=9981 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 
@@ -35,8 +39,9 @@ CREATE TABLE `eye` (
   `cylinder` float DEFAULT NULL,
   `sphere` float DEFAULT NULL,
   PRIMARY KEY (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=19961 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
+
 
 --
 -- Table structure for table `glasses`
@@ -61,10 +66,11 @@ CREATE TABLE `glasses` (
   KEY `FKn7g5jsbuiwnmpeh90i89y4gv0` (`dispense_id`),
   KEY `FKovw8a7k5pow8in36qh2k3t0ja` (`od_id`),
   KEY `FKnnd7mfxvhrbjwv8p5xiswnai8` (`os_id`),
+  KEY `sku` (`sku`),
   CONSTRAINT `FKn7g5jsbuiwnmpeh90i89y4gv0` FOREIGN KEY (`dispense_id`) REFERENCES `dispense` (`id`),
   CONSTRAINT `FKnnd7mfxvhrbjwv8p5xiswnai8` FOREIGN KEY (`os_id`) REFERENCES `eye` (`id`),
   CONSTRAINT `FKovw8a7k5pow8in36qh2k3t0ja` FOREIGN KEY (`od_id`) REFERENCES `eye` (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=9981 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
@@ -87,7 +93,9 @@ CREATE TABLE `roles` (
 
 LOCK TABLES `roles` WRITE;
 /*!40000 ALTER TABLE `roles` DISABLE KEYS */;
-INSERT INTO `roles` VALUES (1,'ROLE_USER'),(2,'ROLE_ADMIN');
+INSERT INTO `roles` VALUES
+(1,'ROLE_USER'),
+(2,'ROLE_ADMIN');
 /*!40000 ALTER TABLE `roles` ENABLE KEYS */;
 UNLOCK TABLES;
 
@@ -131,7 +139,7 @@ CREATE TABLE `users` (
   `username` varchar(20) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
   PRIMARY KEY (`id`),
   UNIQUE KEY `UKr43af9ap4edm43mmtq01oddj6` (`username`)
-) ENGINE=InnoDB AUTO_INCREMENT=5 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
@@ -144,6 +152,7 @@ INSERT INTO `users` VALUES (1,'$2a$10$vpFqQIbEm0Zd0eco2hLxgOTiujxoziOGvKgbX6KE1u
 /*!40000 ALTER TABLE `users` ENABLE KEYS */;
 UNLOCK TABLES;
 
+/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;
 /*!40101 SET SQL_MODE=@OLD_SQL_MODE */;
 /*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */;
 /*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;
@@ -154,7 +163,11 @@ UNLOCK TABLES;
 
 
 
--- COPY dump from reims_dbf_extractor below this line
+
+
+-- COPY dump from reims_dbf_extractor below this line ----------------------------------------------------------------------------------------------------------------
+
+
 
 
 DELETE FROM glasses;
