--- a/frontend/.github/renovate.json
+++ b/frontend/.github/renovate.json
@@ -1,20 +1,7 @@
-{
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+{  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:js-app",
-    "npm:unpublishSafe",
-    ":dependencyDashboard",
-    ":prHourlyLimitNone",
-    ":separateMajorReleases",
-    "helpers:pinGitHubActionDigests",
-    "schedule:weekends",
-    ":automergePatch",
-    ":automergeLinters",
-    ":automergeTesters",
-    ":automergeTypes",
-    ":automergePr"
+    "github>reims2/renovate"
   ],
-  "platformAutomerge": true,
   "packageRules": [
     {
       "matchPackageNames": [
@@ -26,12 +13,6 @@
       ],
       "matchUpdateTypes": ["major"],
       "enabled": false
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["minor", "patch"],
-      "matchCurrentVersion": "!/^0/",
-      "automerge": true
     }
   ]
 }
