chore: Update to Java 21 (#70)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17.0.8_7-jdk-jammy@sha256:bfc748eb9766e9c031bd79f6a37d5d7fcb1ba1adca56106fc4c661fa255340c8 AS build
+FROM eclipse-temurin:21-jdk-jammy AS build
 RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
 
 ENV PORT 5000
@@ -10,7 +10,7 @@ COPY ./src ./src
 RUN --mount=type=cache,target=/root/.m2 ./mvnw clean install -DskipTests
 
 # PROD IMAGE
-FROM eclipse-temurin:17.0.8_7-jre-jammy@sha256:6c78e6fb90509752eaf265b2b71df41199103332c86a38ddb06919108586fd7d
+FROM eclipse-temurin:21-jre-jammy
 RUN apt-get update && apt-get upgrade -y && apt install curl -y && rm -rf /var/lib/apt/lists/*
 
 ENV HOST 0.0.0.0
