--- a/ansible/roles/monitoring/defaults/main.yml
+++ b/ansible/roles/monitoring/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 monitoring_domain: monitoring.{{ app_domain }}
+monitoring_network: monitoring
 grafana_install_location: "/srv/grafana"
 grafana_data_location: "{{ grafana_install_location }}/data"
 
@@ -8,3 +9,4 @@ prometheus_data_location: "{{ prometheus_install_location }}/data"
 prometheus_config_location: "{{ prometheus_install_location }}/prometheus.yml"
 
 grafana_port: "3000"
+prometheus_port: "9090"
