--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -22,6 +22,16 @@
     - "{{ prometheus_data_location }}"
   become: true
 
+- name: Create networks
+  community.docker.docker_network:
+    name: "{{ item }}"
+    driver: "overlay"
+    driver_options:
+      com.docker.network.bridge.name: "{{ item }}"
+  become: true
+  loop:
+    - "{{ monitoring_network }}"
+
 - name: Create docker-compose.yml
   ansible.builtin.template:
     src: docker-compose.yml.j2
@@ -36,8 +46,8 @@
     - wait for grafana
 
 - name: Copy prometheus config
-  ansible.builtin.copy:
-    src: prometheus.yml
+  ansible.builtin.template:
+    src: prometheus.yml.j2
     dest: "{{ prometheus_config_location }}"
     owner: root
     group: root
