Unsuccessful search endpoint, better hash algorithm (#114)
* feature: implementing change detection with less load on database

* chore: added tests for detecting changes

* feature: added unsuccessful search endpoint

* feat: add actuator, fix deps warning

* fix: dont gitignore .vscode

* feat: config for local mariaDB, cleanup outdated comments

* feature: added suggestion from PR 114

* fix: some bug in change value detection

* chore: add vscode run config for local mariadb profile

* feat: remove location from unsuccessful search DTO

* fix: added null checks for unsuccessful search

* fix: IndexOutOfBoundsException in change service

---------

Co-authored-by: Dannpower123 <71441101+Dannpower123@users.noreply.github.com>

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,4 +26,4 @@ HEALTHCHECK --interval=5s --timeout=10s --retries=5 --start-period=20s CMD curl 
 
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["java",  "-jar", "/usr/src/app/app.jar", "--spring.profiles.active=mysql" ]
+CMD ["java",  "-jar", "/usr/src/app/app.jar", "--spring.profiles.active=prod" ]
