--- a/frontend/.github/renovate.json
+++ b/frontend/.github/renovate.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>reims2/renovate"]
+  "extends": [
+    "github>reims2/renovate",
+    ":automergeDisabled"
+  ]
 }
