--- a/ansible/.github/workflows/deploy.yml
+++ b/ansible/.github/workflows/deploy.yml
@@ -2,13 +2,16 @@ name: deploy
 
 on:
   workflow_dispatch:
-  
+
+permissions:
+  contents: read # for checkout
 
 jobs:
-  ansible:
+  release:
     runs-on: ubuntu-latest
-    environment: production
-    permissions: write-all
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - name: Use Node.js 20
@@ -21,6 +24,12 @@ jobs:
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+  ansible:
+    needs: release
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@00765f79cffbf77b8bef397c00d492d8241502be # v2
         with:
