--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "vite-plugin-vue-devtools": "7.1.3",
     "vite-plugin-vuetify": "2.0.3",
     "vitest": "1.6.0",
-    "vue-tsc": "2.0.19"
+    "vue-tsc": "2.0.19",
+    "workbox-window": "7.1.0"
   }
 }
