--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -4,3 +4,10 @@ Dockerfile
 dist
 README*
 static
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
