--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -3,10 +3,13 @@
   "[javascript,vue,js]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "jest.autoRun": {
-    "watch": true,
-    "onStartup": ["all-tests"]
+  "html.format.wrapAttributes": "force-expand-multiline",
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
   },
-  "jest.jestCommandLine": "jest",
-  "html.format.wrapAttributes": "force-expand-multiline"
+  "eslint.nodePath": ".yarn/sdks",
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
