--- a/ansible/.github/renovate.json
+++ b/ansible/.github/renovate.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>reims2/renovate",
-    ":automergeDigest"
+    "github>reims2/renovate"
   ],
   "ansible": {
     "fileMatch": [
