--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -100,3 +100,9 @@ sw.*
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
