--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@babel/types": "7.25.2",
     "@mdi/js": "7.4.47",
     "@pinia/testing": "0.1.5",
+    "@playwright/test": "1.46.1",
     "@testing-library/vue": "8.0.3",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.15",
