--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - "**"
-    tags: [ "v*.*.*" ]
+    tags: ["v*.*.*"]
   pull_request:
     types:
       - "opened"
@@ -35,7 +35,7 @@ jobs:
         uses: advanced-security/maven-dependency-submission-action@4f64ddab9d742a4806eeb588d238e4c311a8397d # v4
 
   docker:
-    uses: reims2/actions/.github/workflows/docker.yml@main
+    uses: reims2/reims2/.github/workflows/docker.yml@main
     concurrency: docker-backend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
@@ -45,7 +45,7 @@ jobs:
       - docker
       - ci # since we don"t execute tests in docker build
     if: github.ref == 'refs/heads/main'
-    uses: reims2/actions/.github/workflows/deploy.yml@main
+    uses: reims2/reims2/.github/workflows/deploy.yml@main
     concurrency: deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
 
@@ -53,7 +53,7 @@ jobs:
     needs:
       - docker
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
-    uses: reims2/actions/.github/workflows/dev-deploy.yml@main
+    uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
     concurrency: dev-deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
 
@@ -61,7 +61,7 @@ jobs:
     needs:
       - docker
     if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
-    uses: reims2/actions/.github/workflows/deploy-instance.yml@main
+    uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
     concurrency: pr-deploy-backend-${{ github.ref }}
     with:
       instance_name: backend-pr-${{ github.event.number || 'unknown' }}
