--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,8 @@ name: ci
 on:
   push:
     branches:
-      - '**'
-    tags: ['v*.*.*']
+      - "**"
+    tags: ["v*.*.*"]
   pull_request:
   merge_group:
   workflow_dispatch:
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: ".nvmrc"
+          cache: "yarn"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
@@ -25,7 +25,7 @@ jobs:
         run: yarn run build
 
   docker:
-    uses: reims2/actions/.github/workflows/docker.yml@main
+    uses: reims2/reims2/.github/workflows/docker.yml@main
     concurrency: docker-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
     secrets: inherit # pass all secrets
@@ -34,7 +34,7 @@ jobs:
     needs:
       - docker
     if: github.ref == 'refs/heads/main'
-    uses: reims2/actions/.github/workflows/deploy.yml@main
+    uses: reims2/reims2/.github/workflows/deploy.yml@main
     concurrency: deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
 
@@ -42,6 +42,6 @@ jobs:
     needs:
       - docker
     if: github.event_name == 'workflow_dispatch'
-    uses: reims2/actions/.github/workflows/dev-deploy.yml@main
+    uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
     concurrency: dev-deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
