--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,14 +3,14 @@ name: ci
 on:
   push:
     branches:
-      - '**'
-    tags: ['v*.*.*']
+      - "**"
+    tags: ["v*.*.*"]
   pull_request:
     types:
-      - 'opened'
-      - 'synchronize'
-      - 'reopened'
-      - 'labeled'
+      - "opened"
+      - "synchronize"
+      - "reopened"
+      - "labeled"
   merge_group:
   workflow_dispatch:
 
@@ -22,8 +22,8 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: ".nvmrc"
+          cache: "yarn"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
@@ -35,7 +35,7 @@ jobs:
         run: yarn run build
 
   docker:
-    uses: reims2/actions/.github/workflows/docker.yml@main
+    uses: reims2/reims2/.github/workflows/docker.yml@main
     concurrency: docker-frontend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
@@ -45,7 +45,7 @@ jobs:
       - docker
       - ci
     if: github.ref == 'refs/heads/main'
-    uses: reims2/actions/.github/workflows/deploy.yml@main
+    uses: reims2/reims2/.github/workflows/deploy.yml@main
     concurrency: deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
 
@@ -53,7 +53,7 @@ jobs:
     needs:
       - docker
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
-    uses: reims2/actions/.github/workflows/dev-deploy.yml@main
+    uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
     concurrency: dev-deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
 
@@ -61,7 +61,7 @@ jobs:
     needs:
       - docker
     if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
-    uses: reims2/actions/.github/workflows/deploy-instance.yml@main
+    uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
     concurrency: pr-deploy-frontend-${{ github.ref }}
     with:
       instance_name: frontend-pr-${{ github.event.number || 'unknown' }}
@@ -76,8 +76,8 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: ".nvmrc"
+          cache: "yarn"
       - name: Install dependencies
         run: yarn
       - name: Install Playwright Browsers
