--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,53 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>reims2/renovate",
-    ":automergeDisabled"
-  ]
+    "config:base",
+    "npm:unpublishSafe",
+    ":dependencyDashboard",
+    ":prHourlyLimitNone",
+    ":separateMajorReleases",
+    "helpers:pinGitHubActionDigests",
+    "docker:pinDigests",
+    ":automergePatch",
+    ":automergeLinters",
+    ":automergeTesters",
+    ":automergeTypes",
+    ":automergeDigest",
+    ":automergePr",
+    "group:test",
+    "group:linters",
+    "group:definitelyTyped",
+    "schedule:automergeWeekends"
+  ],
+  "labels": ["dependencies"],
+  "platformAutomerge": true,
+  "packageRules": [
+    {
+      "matchDepTypes": ["devDependencies"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": true
+    },
+    {
+      "extends": ["packages:test", "packages:linters", "schedule:monthly"]
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "^Dockerfile$",
+        "^.github/.+/*\\.ya?ml$",
+        "defaults/main.ya?ml$"
+      ],
+      "matchStrings": [
+        "renovate:? datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s.*?_(?:VERSION|version)=(?<currentValue>.*)\\s"
+      ],
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+    }
+  ],
+  "schedule": ["before 2pm on Saturday"],
+  "timezone": "Europe/Berlin",
+  "npm": {
+    "extends": [":pinAllExceptPeerDependencies"]
+  }
 }
