--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,6 +14,10 @@ on:
   merge_group:
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./backend
+
 jobs:
   ci:
     runs-on: ubuntu-latest
