--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,10 @@ on:
   merge_group:
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./docs
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -16,8 +20,9 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: ".nvmrc"
+          node-version-file: "docs/.nvmrc"
           cache: "yarn"
+          cache-dependency-path: "docs/yarn.lock"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
