--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,6 +14,10 @@ on:
   merge_group:
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./frontend
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -22,8 +26,9 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: ".nvmrc"
+          node-version-file: "frontend/.nvmrc"
           cache: "yarn"
+          cache-dependency-path: "frontend/yarn.lock"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
